@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-18-2007 patrick     Updated for Gadgeteer 1.3.15. Now, Cocoa OpenGL windows
+                        update their input area size correctly.
+                        NEW VERSION: 2.3.16
 Sep-26-2007 patrick     Fixed crash-on-exit problems with Sonix.
                         NEW VERSION: 2.3.15
 Sep-19-2007 patrick     Added draw thread CPU affinity capabilities through the
